# tngl

./: .gitignore  .tnglignore  Cargo.toml  LICENSE  README.md  tngl  tngl-spec.md
src/: main.rs  tangle.rs
src/commands/: edit.rs  init.rs  inspect.rs  intentionalize_orphans.rs  list.rs  mod.rs  open.rs  status.rs  update.rs  view.rs
src/graph/: layout.rs  model.rs
src/html/: export.rs
src/parser/: config.rs  graph.rs  layout.rs  mod.rs
src/scanner/: diff.rs  mod.rs  tree.rs
src/tui/: TUI_GUIDE.md  canvas.rs  input.rs  mod.rs  render.rs  settings.rs
tangle/: config.tngl  graph.tngl  layout.tngl  map.html
