[package]
name = "tngl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tngl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
