[package]
name = "tngl"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Repo-native TUI graph tool for code relationships"
license = "MIT"
repository = "https://github.com/FrederikLizakJohansen/tngl"
readme = "README.md"
keywords = ["graph", "tui", "code-map", "developer-tools", "documentation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tngl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
ignore = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
